Restyle forms and fix spacing with show page buttons

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -30,7 +30,9 @@ h1{
 }
 
 .navbar-custom .navbar-brand {
-    color: #7A7D85  ;
+    color: #7A7D85;
+    font-family: 'Alegreya', serif;
+    font-weight: bold;
 }
 
 .navbar-custom .navbar-brand:hover {
@@ -66,7 +68,7 @@ h1{
 	width: 100%;
 	display: block;
     margin: 0 auto;
-    border-top: 5px solid #07101C   ;
+    border-top: 5px solid #07101C;
     margin-bottom: 25px;
     box-shadow: 0 1px #FFFFFF inset, 0 1px 3px rgba(34, 25, 25, 0.4);
 }
@@ -172,12 +174,17 @@ a.btn.btn-warning{
 	font-weight: bold;
 }
 
-.editDeleteButtons{
-	margin:7px 0;
+/*Used for buttons on show page*/
+.btn-margin{
+	margin: 7px 0;
+}
+/*Used for "Back to Haunted Places" button on show page*/
+#backTo{
+	margin-bottom: 7px;
 }
 
 #showPageBottomButtons{
-	margin: 15px 0;
+	margin: 10px 0;
 }
 
 
@@ -197,17 +204,17 @@ textarea {
 }
 
 .form-control {
-    color: #555;
+    color: #2A2E33 ;
     background-color: #fff;
     border: 1px solid #CACBCE;
     font-size: 1.1em;
 }
 
 .form-control:focus {
-    border-color: #ff8000;
+    border-color: #102440 ;
     outline: 0;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(255,128,0,0.6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(16, 36, 64, 0.6);
 }
 
 .commentForm{
@@ -242,8 +249,16 @@ textarea {
     font-size: .9em;
 }
 
+#createAccount{
+	margin-top: 30px;
+	text-align: center;
+}
 
-/* Password Strength Info Box on Regiser Page*/
+#createAccount p{
+	margin-bottom: 5px;
+}
+
+/* Password Strength Info Box on Register Page*/
 #passwordInfo{
 	display: none;
 	padding-bottom: 10px;
@@ -276,13 +291,7 @@ ul .glyphicon-remove{
 }
 
 
-/* Media Queries */
-@media only screen and (max-width: 425px) {
-	.hauntedPlaceForm input[type=text]{
-		max-width: 100%;
-	}
-}
-
+/* Custom Buttons*/
 .btn-orange {
     color: #fff;
     background-color: #F76829;
@@ -306,4 +315,11 @@ ul .glyphicon-remove{
   outline: none;
   -webkit-box-shadow: none;
   box-shadow: none;
+}
+
+/* Media Queries */
+@media only screen and (max-width: 425px) {
+	.hauntedPlaceForm input[type=text]{
+		max-width: 100%;
+	}
 }
